Fix passiamo idEdizione invece he data
